--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,29 +2,37 @@
 <html>
 <head>
   <title>DepotAwdr4</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <body class='<%= controller.controller_name %>'>
-  <div id="banner">
-    <%= image_tag('logo.png') %>
-    <%= @page_title || 'Pragmatic Bookshelf' %>
+<div id="banner">
+  <%= image_tag('logo.png') %>
+  <%= @page_title || 'Pragmatic Bookshelf' %>
+</div>
+
+<div id="columns">
+  <div id="side">
+    <% if @cart %>
+      <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+        <%= render @cart %>
+      <% end %>
+    <% end %>
+
+
+    <ul>
+      <li><%= link_to 'Home', store_path %></li>
+      <li><a href="http://www...">Questions</a></li>
+      <li><a href="http://www...">News</a></li>
+      <li><a href="http://www...">Contact</a></li>
+    </ul>
   </div>
 
-  <div id="columns">
-    <div id="side">
-      <ul>
-        <li><%= link_to 'Home', store_path %></li>
-        <li><a href="http://www...">Questions</a></li>
-        <li><a href="http://www...">News</a></li>
-        <li><a href="http://www...">Contact</a></li>
-      </ul>
-    </div>
-
-    <div id="main">
-      <%= yield %>
-    </div>
+  <div id="main">
+    <%= yield %>
   </div>
+</div>
 </body>
 </html>
